// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TDateRewardBase
message TDateRewardBase
{	
	
	
	repeated DateRewardDefine DateReward = 1; // DateReward

}

// Defined in table: DateReward
message DateRewardDefine
{	
	
	
	optional uint32 Id = 1; // 唯一id
	
	
	optional uint32 Level = 2; // 关卡
	
	
	optional uint32 Time = 3; // 时间
	
	
	optional uint32 Place = 4; // 地点
	
	
	optional uint32 Event = 5; // 事情
	
	
	optional uint32 Reward = 6; // 奖励

}

