// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TLoveDialogueBase
message TLoveDialogueBase
{	
	
	
	repeated LoveDialogueDefine LoveDialogue = 1; // LoveDialogue

}

// Defined in table: LoveDialogue
message LoveDialogueDefine
{	
	
	
	optional uint32 Id = 1; // 唯一id
	
	
	optional uint32 PalaceId = 2; // 宫殿ID
	
	
	optional string Headpath = 3; // 头像
	
	
	optional string Name = 4; // 名字
	
	
	optional string Content = 5; // 对话内容

}

